# NextDayCrypto_app

./: Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py
models/: eth_ridge_pipeline.pkl  features_names.json  ridge_final_on_scaled.pkl  ridge_final_on_scaled_data_only.pkl  ridge_final_on_scaled_features_list_3.pkl
